tests/negative/regression/r0.orng
let const a: a.Float() = 0